fixing arrow buttons for dark mode, and adding in github profile icon

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -80,6 +80,7 @@
 }
             
 .full button{
+    color: white;
     width: 50%;
     padding: 10px 0;
     /* background: #4FC2AA; */
