--- a/src/styles/blocks/slider.sass
+++ b/src/styles/blocks/slider.sass
@@ -1,6 +1,7 @@
 @charset "UTF-8"
 
 .slick-slider
+  margin: 0 15px
   // width: 90%
   position: relative
   display: block
