--- a/src/styles/blocks/social.sass
+++ b/src/styles/blocks/social.sass
@@ -13,8 +13,8 @@
 .social--facebook
   background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/white/svg/facebook-f.svg')
 
-.social--twitter
-  background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/white/svg/twitter.svg')
+.social--github
+  background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/white/svg/github.svg')
 
 .social--instagram
   background-image: url('https://cdn.rawgit.com/encharm/Font-Awesome-SVG-PNG/master/white/svg/instagram.svg')
